Wed Dec 22 16:58:23 2004  George Lebl <jirka@5z.com>

	* src/graphing.c: add y= before the entries to make it clear what to
	  type in.

	* src/eval.c: when we encounter a reference to a non-existant
	  variable make the variable in the current context.

	* src/eval.c: fix errors in expensive matrix multiply, now doesn't
	  crash!

	* lib/linear_algebra/linear_algebra.gel: Add LUDecomposition function
	  from David W. Hutchison <dahutchi@indiana.edu>

	* help/C/*.xml: update

Wed Dec 22 14:47:00 2004  George Lebl <jirka@5z.com>

	* help/C/*.xml, help/C/genius.txt: make the text version and fix some
	  typos

Wed Dec 22 14:42:01 2004  George Lebl <jirka@5z.com>

	* lib/number_theory/misc.gel:  Added MoebiusMu from Alessio
	  Frusciante <algol@firenze.linux.it>

	* lib/number_theory/misc.gel:  Fixed parameters of IsNthPower to
	  be less confusing

	* lib/combinatorics/factorial.gel:  Nicer, less heavy argument testing

	* src/funclib.c: Added IsNonNegativeInteger and fix EulerConstant
	  helpstring

	* src/geniustests.txt: added some tests

	* help/C/*.xml: updated for the above functions and a lot more.
	  Add a bunch of references to MathWorld (should add planetmath,
	  but that's currently down, will do later)

Wed Dec 22 11:43:42 2004  George Lebl <jirka@5z.com>

	* mpfr/*: update to newest mpfr

Wed Dec 22 11:21:02 2004  George Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/eval.[ch], src/calc.c: get similar ids if
	  function is not documented and check for the function being
	  documented in the gui help on function dialog.

Wed Dec 22 11:03:34 2004  George Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/calc.[ch], src/funclib.c: some help fixes,
	  remove the old manual code and add a "Help on Function" menu entry.

Wed Dec 22 10:24:05 2004  George Lebl <jirka@5z.com>

	* help/C/*.xml: update the documentation a bit.

Tue Dec 21 18:53:54 2004  George Lebl <jirka@5z.com>

	* help/C/gel-operator-list.xml: make the list of operators an
	  actual list
