@@ -595,7 +595,7 @@ To get help on a specific function from the console type:
           <para>Aliases: <function>abs</function></para>
           <para>
 	    Absolute value of a number and if <varname>x</varname> is
-	    a complex value then returns the modulus of <varname>x</varname>.
+	    a complex value the modulus of <varname>x</varname>.
 	  </para>
           <para>
 	    See
@@ -1255,7 +1255,7 @@ number is specified) of the given size returned.  For example
 	    divides <varname>n</varname>.  If <varname>d</varname>
 	    does not divide <varname>n</varname> then this function returns
 	    garbage.  This is a lot faster for very large numbers
-	    then the operation <userinput>n/d</userinput>, but of course only
+	    than the operation <userinput>n/d</userinput>, but of course only
 	    useful if you know that the division is exact.
 	  </para>
          </listitem>
@@ -1693,8 +1693,8 @@ number is specified) of the given size returned.  For example
           <para>
 	    Greatest common divisor of integers.  You can enter as many
 	    integers in the argument list, or you can give a vector or a matrix
-	    of integers.  If you give more then one matrix of the same
-	    size then GCD is then done element by element.
+	    of integers.  If you give more than one matrix of the same
+	    size then GCD is done element by element.
 	  </para>
           <para>
 	    See
@@ -1711,8 +1711,8 @@ number is specified) of the given size returned.  For example
           <para>
 	    Least common multiplier of integers.  You can enter as many
 	    integers in the argument list, or you can give a vector or a matrix
-	    of integers.  If you give more then one matrix of the same size
-	    then LCM is then done element by element.
+	    of integers.  If you give more than one matrix of the same size
+	    then LCM is done element by element.
 	  </para>
           <para>
 	    See
