@@ -25,7 +25,7 @@ for <identifier> = <from> to <to> by <increment> do <body>
 ]]></programlisting>
         </para>
         <para>
-Loop with identifier being set to all values from <command>&lt;from&gt;</command> to <command>&lt;to&gt;</command>, optionally using an increment other then 1. These are faster, nicer and more compact then the normal loops such as above, but less flexible. The identifier must be an identifier and can't be a dereference. The value of identifier is the last value of identifier, or <command>&lt;from&gt;</command> if body was never evaluated. The variable is guaranteed to be initialized after a loop, so you can safely use it.  Also the <command>&lt;from&gt;</command>, <command>&lt;to&gt;</command> and <command>&lt;increment&gt;</command> must be non complex values. The <command>&lt;to&gt;</command> is not guaranteed to be hit, but will never be overshot, for example the following prints out odd numbers from 1 to 19:
+Loop with identifier being set to all values from <command>&lt;from&gt;</command> to <command>&lt;to&gt;</command>, optionally using an increment other than 1. These are faster, nicer and more compact than the normal loops such as above, but less flexible. The identifier must be an identifier and can't be a dereference. The value of identifier is the last value of identifier, or <command>&lt;from&gt;</command> if body was never evaluated. The variable is guaranteed to be initialized after a loop, so you can safely use it.  Also the <command>&lt;from&gt;</command>, <command>&lt;to&gt;</command> and <command>&lt;increment&gt;</command> must be non complex values. The <command>&lt;to&gt;</command> is not guaranteed to be hit, but will never be overshot, for example the following prints out odd numbers from 1 to 19:
 <programlisting>for i = 1 to 20 by 2 do print(i)
 </programlisting>
         </para>
