@@ -271,9 +271,9 @@ different from <literal>=</literal> because it never gets translated to a
          <term><synopsis>a&lt;=b</synopsis></term>
          <listitem>
            <para>
-             Less then or equal operator,
+             Less than or equal operator,
 	     returns <literal>true</literal> if <varname>a</varname> is
-	     less then or equal to 
+	     less than or equal to 
 	     <varname>b</varname> else returns <literal>false</literal>.
            </para>
          </listitem>
@@ -284,9 +284,9 @@ different from <literal>=</literal> because it never gets translated to a
          <term><synopsis>a&gt;=b</synopsis></term>
          <listitem>
            <para>
-             Greater then or equal operator,
+             Greater than or equal operator,
 	     returns <literal>true</literal> if <varname>a</varname> is
-	     greater then or equal to 
+	     greater than or equal to 
 	     <varname>b</varname> else returns <literal>false</literal>.
            </para>
          </listitem>
@@ -299,8 +299,8 @@ different from <literal>=</literal> because it never gets translated to a
            <para>
 	     Comparison operator.  If <varname>a</varname> is equal to
 	     <varname>b</varname> it returns 0, if <varname>a</varname> is less
-	     then <varname>b</varname> it returns -1 and if
-	     <varname>a</varname> is greater then <varname>b</varname> it
+	     than <varname>b</varname> it returns -1 and if
+	     <varname>a</varname> is greater than <varname>b</varname> it
 	     returns 1.
            </para>
          </listitem>
@@ -534,7 +534,7 @@ The comparison operators (except for the &lt;=&gt; operator which behaves normal
 
 <note>
 <para>
-The unitary minus operates in a different fashion depending on where it appears.  If it appears before a number it binds very closely, if it appears in front of an expression it binds less then the power and factorial operators.  So for example -1^k is really (-1)^k, but -foo(1)^k is really -(foo(1)^k).  So be careful how you use it and if in doubt, add parentheses.
+The unitary minus operates in a different fashion depending on where it appears.  If it appears before a number it binds very closely, if it appears in front of an expression it binds less than the power and factorial operators.  So for example -1^k is really (-1)^k, but -foo(1)^k is really -(foo(1)^k).  So be careful how you use it and if in doubt, add parentheses.
 </para>
 </note>
     </sect1>
