@@ -2,7 +2,7 @@
     <sect1 id="genius-gel-separator">
       <title>Separator</title>
       <para>
-In GEL if you want to type more then one command you have to use
+In GEL if you want to type more than one command you have to use
 the <literal>;</literal> operator, which is a way to separate expressions,
 such a combined expression will return whatever is the result of the last
 one, so
