@@ -31,7 +31,7 @@
 	    <guilabel>Always print full expressions</guilabel>
       </term> 
 	  <listitem>
-        <para>Should we print out full expressions for non-numeric return values (longer then a line) (<function>FullExpressions</function>)</para>
+        <para>Should we print out full expressions for non-numeric return values (longer than a line) (<function>FullExpressions</function>)</para>
 	  </listitem>
 	</varlistentry>
 
@@ -66,7 +66,7 @@
 	  (<function>MaxErrors</function>).  If you set this to 0 then
 	  all errors are always returned.  Usually if some loop causes
 	  many errors, then it is unlikely that you will be able to make
-	  sense out of more then a few of these, so seeing a long list
+	  sense out of more than a few of these, so seeing a long list
 	  of errors is usually not helpful.
 	  </para>
 	  </listitem>
@@ -86,7 +86,7 @@
 	    <function>MixedFractions</function>
       </term> 
 	  <listitem>
-        <para>If fractions should be printed as mixed fractions such as "1 1/3" rather then "4/3"</para>
+        <para>If fractions should be printed as mixed fractions such as "1 1/3" rather than "4/3"</para>
 	  </listitem>
 	</varlistentry>
 
