@@ -1,3 +1,7 @@
+Wed Dec 22 18:01:51 2004  George Lebl <jirka@5z.com>
+
+	* src/funclib.c, help/C/*.xml: Fix then vs. than typos
+
 Wed Dec 22 16:58:23 2004  George Lebl <jirka@5z.com>
 
 	* src/graphing.c: add y= before the entries to make it clear what to
